--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     </tr>
                     <tr>
                       <th scope="row">CTTrack</th>
-                      <td>AAAI</td>
+                      <td>AAAI22</td>
                       <td>Python</td>
                       <td>0.450</td>
                       <td id="norm-pre">0.489</td>
