--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
                       Home
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#Introduction">Introduction</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#Video">Video</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#Acknowledgements">Acknowledgements</a></li>
+                        <li><a class="dropdown-item" href="#Introduction">Introduction</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#Update_Performance">Update Performance</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#Video">Video</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#Acknowledgements">Acknowledgements</a></li>
                     </ul>
                 </li>
                 <li class="nav-item" >
@@ -137,10 +139,10 @@
             </b>
           </a>
         </span>
-		<h1 class="pt-2 h1-2" id="Video">Update Performance</h1>
+		<h1 class="pt-2 h1-2" id="Update_Performance">Update Performance</h1>
 		<hr/>
 		<span>
-          We evaluated the performance of some latest algorithms on WATB, and the performance evaluation results are as follows. Please refer to past algorithm evaluation results in <a target="blank" href="./EvaluationandResult.html#Overall_all_Performance_top">Overall all Performance.</a>
+          We evaluated the performance of some latest algorithms on WATB, the performance evaluation results are as follows, the tracking results are download from <a href="javascript:openLink('./download/WATB_update_tracking_results_1.zip', './download/WATB_update_tracking_results_2.zip')">here.</a> Please refer to past algorithm evaluation results in <a target="blank" href="./EvaluationandResult.html#Overall_all_Performance_top">Overall all Performance.</a>
         </span>
 		<p></p>
 		<table class="table  table-hover ">
