--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		<h1 class="pt-2 h1-2" id="Update_Performance">Update Performance</h1>
 		<hr/>
 		<span>
-          We evaluated the performance of some latest algorithms on WATB, the performance evaluation results are as follows, the tracking results are download from <a href="javascript:openLink('./download/WATB_update_tracking_results_1.zip', './download/WATB_update_tracking_results_2.zip')">here.</a> Please refer to past algorithm evaluation results in <a target="blank" href="./EvaluationandResult.html#Overall_all_Performance_top">Overall all Performance.</a>
+          We evaluated the performance of some latest algorithms on WATB, the performance evaluation results are as follows, the tracking results are download from <a href="javascript:openLink('../download/WATB_update_tracking_results_1.zip', '../download/WATB_update_tracking_results_2.zip')">here.</a> Please refer to past algorithm evaluation results in <a target="blank" href="./EvaluationandResult.html#Overall_all_Performance_top">Overall all Performance.</a>
         </span>
 		<p></p>
 		<table class="table  table-hover ">
